--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/employee
-spring.datasource.username=akhil
-spring.datasource.password=Akhil@1005
+spring.datasource.url=jdbc:sqlserver://172.17.0.2:54333;databaseName=employee
+spring.datasource.username=sa
+spring.datasource.password=interOP@123
+#spring.datasource.driverClassName: "com.microsoft.sqlserver.jdbc.SQLServerDriver"
